set-up Firebase part1.6

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "D:/FlutterDev/flutter_streaming_app/windows/runner"
+    "cmake.sourceDirectory": "D:/FlutterDev/flutter_streaming_app/windows/runner",
+    "java.configuration.updateBuildConfiguration": "automatic"
 }
