--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   agora_uikit: ^1.3.7
   google_fonts: ^6.1.0
+  firebase_core: ^2.23.0
+  firebase_auth: ^4.14.1
+  firebase_storage: ^11.5.2
+  cloud_firestore: ^4.13.2
+  agora_rtm: ^1.5.9
 
 dev_dependencies:
   flutter_test:
