--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_storage: ^11.5.2
   cloud_firestore: ^4.13.2
   agora_rtm: ^1.5.9
+  provider: ^6.1.1
+  
 
 dev_dependencies:
   flutter_test:
@@ -67,7 +69,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/img/
+      - assets/img/
+      - assets/icons/
   #   - assets/images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
