--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,19 +35,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  agora_uikit: ^1.3.7
   google_fonts: ^6.1.0
   firebase_core: ^2.23.0
   firebase_auth: ^4.14.1
   firebase_storage: ^11.5.2
   cloud_firestore: ^4.13.2
-  agora_rtm: ^1.5.9
   provider: ^6.1.1
   material_symbols_icons: ^4.2711.0
   flutter_svg: ^2.0.9
   dotted_border: ^2.1.0
   gap: ^3.0.1
   file_picker: ^6.1.1
+  uuid: ^4.2.1
+  agora_rtc_engine: ^5.3.1
+  permission_handler: ^11.1.0
+  agora_rtm: ^1.5.9
   
 
 dev_dependencies:
