--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   agora_rtc_engine: ^5.3.1
   permission_handler: ^11.1.0
   agora_rtm: ^1.5.9
+  http: ^1.1.2
+  timeago: ^3.6.0
   
 
 dev_dependencies:
